[package]
name = "authservice-sdk"
version = "0.1.0"
edition = "2021"
description = "HTTP client and Axum helpers for AuthService OAuth2/OIDC APIs"
license = "MIT"
readme = "README.md"
keywords = ["oauth2", "oidc", "auth", "axum", "bff"]
categories = ["authentication", "web-programming::http-client"]
repository = "https://github.com/Ai-SPB-Holding/AAuthLib"

[features]
default = ["rustls-tls"]
rustls-tls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]
axum = ["dep:axum", "dep:async-trait"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
secrecy = "0.10"
tokio = { version = "1", features = ["sync", "time"] }
url = "2"
uuid = { version = "1", features = ["serde", "v4"] }
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"

reqwest = { version = "0.12", default-features = false, features = ["json"] }
axum = { version = "0.7", optional = true, default-features = false, features = ["json", "query", "form"] }
async-trait = { version = "0.1", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[[example]]
name = "bff_auth_code"
required-features = ["axum"]

[[example]]
name = "bff_embedded_session"

[[example]]
name = "client_credentials"
